--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
     <div class="dropdown-container">
         <div class="dp-drop-container">
-            <label for="hands">What is the DP's hand?</label>
+            <label for="hands">What is the Dealer's hand?</label>
             <select name="hands" id="hands">
                 <option value="select" selected disabled hidden>--Select--</option>
                 <option value="High Card">High Card</option>
